# vehicle-manager-axum

./: .gitignore  Cargo.toml  README.md  api-tests.ps1
src/: main.rs  vehicle.rs
