[package]
name = "vehicle-manager-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
